--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,13 +7,50 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-  <ListView
+  <ScrollView
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:id="@+id/listVie"
-      >
-<!--Se crea otro new elemento xml -->
+      android:layout_height="match_parent">
 
-  </ListView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+      <TextView
+          android:id="@+id/textView"
+          android:layout_width="match_parent"
+          android:layout_height="51dp"
+          android:gravity="center"
+          android:text="@string/menu"
+          android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+          android:textColor="@android:color/background_dark"
+          android:textSize="30sp"
+          android:textStyle="bold" />
+
+      <ListView
+          android:id="@+id/listVie"
+          android:layout_width="match_parent"
+          android:layout_height="615dp">
+        <!--Se crea otro new elemento xml -->
+
+      </ListView>
+
+      <Button
+          android:id="@+id/button"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="@string/btnComprar"
+          android:onClick="comprar"
+          />
+
+      <Button
+          android:id="@+id/button2"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:onClick="reiniciar"
+          android:text="@string/btnReiniciar" />
+
+    </LinearLayout>
+  </ScrollView>
 
 </LinearLayout>
