--- a/app/src/main/res/layout/fila.xml
+++ b/app/src/main/res/layout/fila.xml
@@ -8,10 +8,9 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="100dp"
         android:src="@mipmap/ic_launcher" />
-
 
     <LinearLayout
         android:layout_width="273dp"
