--- a/app/src/main/res/layout/fila.xml
+++ b/app/src/main/res/layout/fila.xml
@@ -5,18 +5,20 @@
     android:orientation="horizontal"
     android:padding="16dp">
 
-
+    <!--El ImageView son las imagenes de los platos -->
     <ImageView
         android:id="@+id/image"
         android:layout_width="180dp"
         android:layout_height="100dp"
         android:src="@mipmap/ic_launcher" />
 
+    <!--El LinearLayout es  para mantener los elementos fijos-->
     <LinearLayout
         android:layout_width="273dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <!--El  TextView  es el titulo del plato-->
         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
@@ -27,6 +29,7 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
+        <!--El  TextView  es el precio del plato-->
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
